
[package]
name = "rst-cli"
version = "1.0.0"
description = "A lightweight command-line tool for Raw Socket (file) Transfer."
authors = ["Rick Lugtigheid <rlugtigheid77@gmail.com>"]
license = "MIT"
edition = "2024"

[[bin]]
name = "rst"
path = "main.rs"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
rst-core = { path = "../rst-core" }
